Improved settings button, plus auto TTS

--- a/src/settings.html
+++ b/src/settings.html
@@ -2,39 +2,57 @@
 <html>
 
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.0/dist/tailwind.min.css" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="dist/output.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="markdown-styles.css" />
     <title>Settings</title>
 </head>
 
-<body class="p-4">
-    <h1 class="text-xl font-bold mb-4">Settings</h1>
-    <!-- Settings form or options here -->
+<body class="p-4 dark:bg-slate-700">
+    <div class="flex justify-between items-start">
+        <h1 class="text-xl font-bold mb-4">Settings</h1>
+        <!-- Close button styled as a cross in the upper right corner -->
+        <button id="closeButton" class="text-gray-800 dark:text-gray-200 font-bold p-2 rounded-full">
+            &#10005; <!-- HTML entity for a cross symbol -->
+        </button>
+    </div>
 
-    <!-- Close button -->
-    <button id="closeButton" class="mt-4 bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">
-        Close
-    </button>
+    <hr class="mb-4"> <!-- Separator line -->
+    <div class="flex items-center justify-between mb-4">
+        <span class="text-lg">Choose theme:</span>
+        <div id="toggleDarkMode" class="fixed top-15 right-0 z-50 pr-4">
+            <input type="checkbox" name="light-switch" class="light-switch sr-only" />
+            <label class="relative cursor-pointer p-2" for="light-switch">
+                <svg class="dark:hidden" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
+                    <path class="fill-slate-600"
+                        d="M7 0h2v2H7zM12.88 1.637l1.414 1.415-1.415 1.413-1.413-1.414zM14 7h2v2h-2zM12.95 14.433l-1.414-1.413 1.413-1.415 1.415 1.414zM7 14h2v2H7zM2.98 14.364l-1.413-1.415 1.414-1.414 1.414 1.415zM0 7h2v2H0zM3.05 1.706 4.463 3.12 3.05 4.535 1.636 3.12z" />
+                    <path class="fill-slate-700" d="M8 4C5.8 4 4 5.8 4 8s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4Z" />
+                </svg>
+                <svg class="hidden dark:block" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
+                    <path class="fill-slate-400"
+                        d="M6.2 1C3.2 1.8 1 4.6 1 7.9 1 11.8 4.2 15 8.1 15c3.3 0 6-2.2 6.9-5.2C9.7 11.2 4.8 6.3 6.2 1Z" />
+                    <path class="fill-slate-500"
+                        d="M12.5 5a.625.625 0 0 1-.625-.625 1.252 1.252 0 0 0-1.25-1.25.625.625 0 1 1 0-1.25 1.252 1.252 0 0 0 1.25-1.25.625.625 0 1 1 1.25 0c.001.69.56 1.249 1.25 1.25a.625.625 0 1 1 0 1.25c-.69.001-1.249.56-1.25 1.25A.625.625 0 0 1 12.5 5Z" />
+                </svg>
+                <span class="sr-only">Switch to light / dark version</span>
+            </label>
+        </div>
 
-    <div id="toggleDarkMode" class="fixed top-3 right-0 z-50 pr-2 mt-2">
-        <input type="checkbox" name="light-switch" class="light-switch sr-only" />
-        <label class="relative cursor-pointer p-2" for="light-switch">
-            <svg class="dark:hidden" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
-                <path class="fill-slate-600"
-                    d="M7 0h2v2H7zM12.88 1.637l1.414 1.415-1.415 1.413-1.413-1.414zM14 7h2v2h-2zM12.95 14.433l-1.414-1.413 1.413-1.415 1.415 1.414zM7 14h2v2H7zM2.98 14.364l-1.413-1.415 1.414-1.414 1.414 1.415zM0 7h2v2H0zM3.05 1.706 4.463 3.12 3.05 4.535 1.636 3.12z" />
-                <path class="fill-slate-700" d="M8 4C5.8 4 4 5.8 4 8s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4Z" />
-            </svg>
-            <svg class="hidden dark:block" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
-                <path class="fill-slate-400"
-                    d="M6.2 1C3.2 1.8 1 4.6 1 7.9 1 11.8 4.2 15 8.1 15c3.3 0 6-2.2 6.9-5.2C9.7 11.2 4.8 6.3 6.2 1Z" />
-                <path class="fill-slate-500"
-                    d="M12.5 5a.625.625 0 0 1-.625-.625 1.252 1.252 0 0 0-1.25-1.25.625.625 0 1 1 0-1.25 1.252 1.252 0 0 0 1.25-1.25.625.625 0 1 1 1.25 0c.001.69.56 1.249 1.25 1.25a.625.625 0 1 1 0 1.25c-.69.001-1.249.56-1.25 1.25A.625.625 0 0 1 12.5 5Z" />
-            </svg>
-            <span class="sr-only">Switch to light / dark version</span>
-        </label>
     </div>
 
 
-    <script src="settings.js"></script>
+    <div class="auto-tts-container">
+        <label for="auto-tts-toggle">Enable
+            Automatic TTS: </label>
+        <input type="checkbox" id="auto-tts-toggle"
+            class="shrink-0 fixed top-15 right-5 z-50  border-gray-200 rounded text-blue-600 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:checked:bg-blue-500 dark:checked:border-blue-500 dark:focus:ring-offset-gray-800"
+            id="hs-default-checkbox">
+
+    </div>
+
+
 </body>
+<script src="settings.js"></script>
 
 </html>
