--- a/src/settings.html
+++ b/src/settings.html
@@ -10,18 +10,20 @@
 </head>
 
 <body class="p-4 dark:bg-slate-700">
+    <input id="scriptToggle" style="display: none; width: 0; height: 0;" />
     <div class="flex justify-between items-start">
-        <h1 class="text-xl font-bold mb-4">Settings</h1>
+        <h1 class="text-xl font-bold mb-4 dark:text-gray-400 ">Settings</h1>
         <!-- Close button styled as a cross in the upper right corner -->
         <button id="closeButton" class="text-gray-800 dark:text-gray-200 font-bold p-2 rounded-full">
             &#10005; <!-- HTML entity for a cross symbol -->
         </button>
     </div>
 
-    <hr class="mb-4"> <!-- Separator line -->
-    <div class="flex items-center justify-between mb-4">
+    <hr class=""> <!-- Separator line -->
+
+    <div class="flex items-center justify-between dark:text-gray-400 ">
         <span class="text-lg">Choose theme:</span>
-        <div id="toggleDarkMode" class="fixed top-15 right-0 z-50 pr-4">
+        <div id="toggleDarkMode" class="">
             <input type="checkbox" name="light-switch" class="light-switch sr-only" />
             <label class="relative cursor-pointer p-2" for="light-switch">
                 <svg class="dark:hidden" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
@@ -41,18 +43,149 @@
 
     </div>
 
-
-    <div class="auto-tts-container">
+    <div class="auto-tts-container flex justify-between items-center dark:text-gray-400 ">
         <label for="auto-tts-toggle">Enable
             Automatic TTS: </label>
         <input type="checkbox" id="auto-tts-toggle"
-            class="shrink-0 fixed top-15 right-5 z-50  border-gray-200 rounded text-blue-600 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:checked:bg-blue-500 dark:checked:border-blue-500 dark:focus:ring-offset-gray-800"
+            class="mr-1 border-gray-500 rounded text-blue-600 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:checked:bg-blue-500 dark:checked:border-blue-500 dark:focus:ring-offset-gray-800"
             id="hs-default-checkbox">
-
     </div>
+
+    <hr class="mt-4"> <!-- Separator line -->
+    <form id="configForm" class="p-6 rounded-lg space-y-4">
+        <div class="form-group">
+            <div class="flex justify-between items-center">
+                <label for="n_ctx" class="block text-sm font-medium text-gray-700 dark:text-gray-400 ">Context
+                    window:</label>
+                <output id="n_ctx_output" for="n_ctx"
+                    class="block text-sm font-medium text-gray-700 dark:text-gray-400 ">4000</output>
+            </div>
+            <input type="range" id="n_ctx" name="n_ctx" class="slider w-full bg-gray-200" min="1" max="4000"
+                value="4000" oninput="updateOutput('n_ctx')">
+        </div>
+
+        <div class="form-group">
+            <div class="flex justify-between items-center">
+                <label for="n_batch" class="block text-sm font-medium text-gray-700 dark:text-gray-400 ">Batch
+                    size:</label>
+                <output id="n_batch_output" for="n_batch"
+                    class="block text-sm font-medium text-gray-700 dark:text-gray-400 ">256</output>
+            </div>
+            <input type="range" id="n_batch" name="n_batch" class="slider w-full bg-gray-200" min="1" max="2048"
+                value="256" oninput="updateOutput('n_batch')">
+        </div>
+
+        <div class="form-group">
+            <div class="flex justify-between items-center">
+                <label for="max_tokens" class="block text-sm font-medium text-gray-700 dark:text-gray-400 ">Max
+                    tokens:</label>
+                <output id="max_tokens_output" for="max_tokens"
+                    class="block text-sm font-medium text-gray-700 dark:text-gray-400 ">2000</output>
+            </div>
+            <input type="range" id="max_tokens" name="max_tokens" class="slider w-full bg-gray-200" min="16" max="4000"
+                value="2000" oninput="updateOutput('max_tokens')">
+        </div>
+
+        <div class="form-group">
+            <div class="flex justify-between items-center">
+                <label for="chunk_length" class="block text-sm font-medium text-gray-700 dark:text-gray-400 ">Chunk
+                    Length:</label>
+                <output id="chunk_length_output" for="chunk_length"
+                    class="block text-sm font-medium text-gray-700 dark:text-gray-400 ">4000</output>
+            </div>
+            <input type="range" id="chunk_length" name="chunk_length" class="slider w-full bg-gray-200" min="0"
+                max="4000" value="4000" oninput="updateOutput('chunk_length')">
+        </div>
+
+        <div class="form-group">
+            <div class="flex justify-between items-center">
+                <label for="chunk_overlap" class="block text-sm font-medium text-gray-700 dark:text-gray-400 ">Chunk
+                    Overlap:</label>
+                <output id="chunk_overlap_output" for="chunk_overlap"
+                    class="block text-sm font-medium text-gray-700 dark:text-gray-400 ">2000</output>
+            </div>
+            <input type="range" id="chunk_overlap" name="chunk_overlap" class="slider w-full bg-gray-200" min="0"
+                max="4000" value="2000" oninput="updateOutput('chunk_overlap')">
+        </div>
+
+        <div class="form-group">
+            <div class="flex justify-between items-center">
+                <label for="big_dot_temperature" class="block text-sm font-medium text-gray-700 dark:text-gray-400 ">Big
+                    Dot
+                    Temperature:</label>
+                <output id="big_dot_temperature_output" for="big_dot_temperature"
+                    class="block text-sm font-medium text-gray-700 dark:text-gray-400 ">0.7</output>
+            </div>
+            <input type="range" id="big_dot_temperature" name="big_dot_temperature" class="slider w-full bg-gray-200"
+                step="0.01" min="0.00" max="1.00" value="0.7" oninput="updateOutput('big_dot_temperature')">
+        </div>
+
+        <div class="form-group">
+            <label for="big_dot_prompt" class="block text-sm font-medium text-gray-700 dark:text-gray-400 ">Big Dot
+                prompt:</label>
+            <input type="text" id="big_dot_prompt" name="big_dot_prompt"
+                class="prompt-box form-input mt-2 block w-full rounded-md" value="hi">
+        </div>
+
+        <div class="form-group">
+            <label for="fileSelector" class="block text-sm font-medium text-gray-700 dark:text-gray-400 ">Select LLM
+                model:</label>
+            <button id="fileSelector" type="button"
+                class="px-4 py-2 bg-blue-700 text-white font-medium rounded-lg hover:bg-blue-800">Choose File</button>
+            <span id="filePathDisplay" class="prompt-box form-input mt-2 block w-full rounded-md">No file
+                selected</span>
+        </div>
+
+
+        <button type="submit"
+            class="px-6 py-2 bg-blue-700 text-gray-50 font-semibold rounded-lg  hover:bg-blue-800 focus:outline-none focus:ring-2 focus:ring-blue-700 focus:ring-opacity-50 transition duration-150 ease-in-out">
+            Save
+        </button>
+        <button type="button" id="resetButton"
+            class="px-6 py-2 bg-red-700 text-gray-50 font-semibold rounded-lg hover:bg-red-800 focus:outline-none focus:ring-2 focus:ring-red-700 focus:ring-opacity-50 transition duration-150 ease-in-out">
+            Reset to Default
+        </button>
+
+        <p class="text-sm text-gray-700">Some settings might only come into effect after restarting Dot!</p>
+
+
+    </form>
+    <hr class="">
+
+    <script>
+        function updateOutput(id) {
+            var value = document.getElementById(id).value;
+            document.getElementById(id + '_output').textContent = value;
+        }
+    </script>
 
 
 </body>
 <script src="settings.js"></script>
+
+
+<style>
+    .prompt-box {
+        font-family: 'Courier New', Courier, monospace;
+        /* Retro font */
+        color: rgb(235, 235, 235);
+        /* Neon green text */
+        background: #222222;
+        /* Dark background */
+        border: 2px solid rgb(4, 4, 4);
+        ;
+        /* Neon green border */
+        padding: 10px;
+        margin-bottom: 10px;
+        box-shadow: 0 0 10px rgb(178, 178, 178);
+        ;
+        /* Outer neon glow */
+        text-shadow: 0 0 5px rgb(178, 178, 178);
+        border-radius: 10px;
+        /* Rounded corners */
+        ;
+        /* Text glow */
+    }
+</style>
 
 </html>
