--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,7 @@
 </head>
 
 <body>
-    <input id="scriptToggle" style="display: none; width: 0; height: 0;" />
-    <div id="titlebar" class="z-50 border-x border-gray-200 dark:border-slate-800 dark:bg-slate-800 bg-gray-50"></div>
+    <input id="scriptToggle" style="display: none; width: 0; height: 0;" />    
     <div id="backgroundOverlay"></div>
 
     <div class="flex h-screen dark:bg-slate-700">
@@ -42,7 +41,7 @@
             class="flex h-full w-1/5 flex-col justify-between border-x border-gray-200 dark:border-slate-900 dark:bg-slate-800 bg-gray-50">
             <div class="mt-2 flex items-center justify-center">
                 <button id="selectDirectoryButton"
-                    class="mt-6 flex min-h-10 w-11/12 min-w-10 items-center justify-between gap-1.5 rounded-lg dark:bg-slate-700 bg-white px-3 py-1.5 text-gray-900 shadow-md hover:bg-blue-700 dark:text-gray-300 hover:text-white">
+                    class=" flex min-h-10 w-11/12 min-w-10 items-center justify-between gap-1.5 rounded-lg dark:bg-slate-700 bg-white px-3 py-1.5 text-gray-900 shadow-md hover:bg-blue-700 dark:text-gray-300 hover:text-white">
                     <span class="text-md font-medium">Upload documents</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="h-6 w-6">
@@ -97,7 +96,7 @@
 
 
             <!-- Dropdown HTML -->
-            <div class="fixed top-3 left-1/2 z-50 transform  mt-5">
+            <div class="fixed top-3 left-1/2 z-50 transform  ">
                 <div class="relative inline-block text-left">
 
                     <button type="button" onclick="toggleDropdown()"
@@ -153,7 +152,7 @@
                 </div>
             </div>
 
-            <div id="settingsButton" class="fixed top-0 right-0 z-50 pr-2 mt-10">
+            <div id="settingsButton" class="fixed top-0 right-0 z-50 pr-2 mt-5">
                 <input type="checkbox" name="settings" class="settings sr-only" />
                 <label class="relative cursor-pointer" for="settings">
                     <svg class="fill-slate-600" width="20px" height="20px" viewBox="0 0 24 24"
@@ -509,14 +508,6 @@
                 <div class="input-container mt-3 w-3/4 relative">
                     <input type="text" id="user-input" placeholder="Type your message..."
                         class="h-9.5 focus:ring-none block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 pl-3 pr-10 text-base text-gray-900 shadow-sm focus:border-none dark:border-gray-600 dark:bg-gray-700 dark:text-gray-300 dark:placeholder-gray-400" />
-                    <button id="runStreamBtn" class="absolute inset-y-0 right-0 flex items-center pr-3">
-                        <svg id="mic-icon" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
-                            viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                            <path
-                                d="M20 12V13C20 17.4183 16.4183 21 12 21C7.58172 21 4 17.4183 4 13V12M12 17C9.79086 17 8 15.2091 8 13V7C8 4.79086 9.79086 3 12 3C14.2091 3 16 4.79086 16 7V13C16 15.2091 14.2091 17 12 17Z"
-                                stroke-linecap="round" stroke-linejoin="round"></path>
-                        </svg>
-                    </button>
                 </div>
 
                 <!-- send button -->
