--- a/src/index.html
+++ b/src/index.html
@@ -507,14 +507,16 @@
                 <div class="input-container mt-3 w-3/4 relative">
                     <input type="text" id="user-input" placeholder="Type your message..."
                         class="h-9.5 focus:ring-none block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 pl-3 pr-10 text-base text-gray-900 shadow-sm focus:border-none dark:border-gray-600 dark:bg-gray-700 dark:text-gray-300 dark:placeholder-gray-400" />
-                    <button id="runStreamBtn" class="absolute inset-y-0 right-0 flex items-center pr-3">
+
+                    <!--                  <button id="runStreamBtn" class="absolute inset-y-0 right-0 flex items-center pr-3">
                         <svg id="mic-icon" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                             <path
                                 d="M20 12V13C20 17.4183 16.4183 21 12 21C7.58172 21 4 17.4183 4 13V12M12 17C9.79086 17 8 15.2091 8 13V7C8 4.79086 9.79086 3 12 3C14.2091 3 16 4.79086 16 7V13C16 15.2091 14.2091 17 12 17Z"
                                 stroke-linecap="round" stroke-linejoin="round"></path>
                         </svg>
-                    </button>
+                    </button>>
+-->
                 </div>
 
                 <!-- send button -->
